syntax = "proto3";

package ohm.v1;

message Cosigner {
  string email = 1;
  string public_key = 2;
}

message GetCosignerRequest {
  string signer_id = 1;
}

message GetCosignerResponse {
  Cosigner signer = 1;
  repeated string wallets = 2;
}

message RegisterCosignerRequest {
  Cosigner signer = 1;
}

message RegisterCosignerResponse {
  string signer_id = 1;
}

message FindCosignerRequest {
  optional string email = 1;
  optional string public_key = 2;
}

message FindCosignerResponse {
  repeated Cosigner signers = 1;
}

message ForgetCosignerRequest {
  string signer_id = 1;
}

message ForgetCosignerResponse {
  string signer_id = 1;
}
