syntax = "proto3";

package ohm.v1;

import "ohm/v1/models/transaction.proto";

message CreatePsbtRequest {
  string amount = 1;
  string address = 2;
  string wallet_id = 3;
}

message CreatePsbtResponse {
  string psbt_id = 1;
  string psbt = 2;
}

message RegisterPsbtRequest {
  string wallet_id = 1;
  string psbt = 2;
}

message RegisterPsbtResponse {
  string psbt_id = 1;
}

message SignPsbtRequest {
  string wallet_id = 1;
  string psbt_id = 2;
}

message SignPsbtResponse {
  string psbt_id = 1;
  string signed_psbt = 2;
}

message CombineWithOtherPsbtRequest {
  string wallet_id = 1;
  string psbt_id = 2;
  string psbt = 3;
}

message CombineWithOtherPsbtResponse {
  string combined_psbt = 1;
}

message BroadcastPsbtRequest {
  string wallet_id = 1;
  string psbt_id = 2;
}

message BroadcastPsbtResponse {
  Transaction transaction = 1;
}

message ForgetPsbtRequest {
  string psbt_id = 1;
}

message ForgetPsbtResponse {
  string psbt_id = 1;
}
