syntax = "proto3";

package ohm.v1;

import "ohm/v1/models/transaction.proto";

message GetWalletInfoRequest {
  string wallet_id = 1;
}

message GetWalletInfoResponse {
  string balance = 1;
  string receive_descriptor = 2;
  string receive_address = 3;
  string receive_address_index = 4;
  string change_descriptor = 5;
  string change_address = 6;
  string change_address_index = 7;
  repeated Transaction transactions = 8;
}

enum AddressType {
  ADDRESS_TYPE_UNSPECIFIED = 0;
  ADDRESS_TYPE_NATIVE_SEGWIT = 1;
  ADDRESS_TYPE_SEGWIT = 2;
  ADDRESS_TYPE_TAPROOT = 3;
}

enum Network {
  NETWORK_UNSPECIFIED = 0;
  NETWORK_REGTEST = 1;
  NETWORK_TESTNET = 2;
  NETWORK_MAINNET = 3;
}

message CreateWalletRequest {
  AddressType type = 1;
  Network network = 2;
  uint64 required_signatures = 3;
  repeated string cosigner_ids = 4;
}

message CreateWalletResponse {
  string wallet_id = 1;
  string receive_descriptor = 2;
  string change_descriptor = 3;
}

message GetReceiveAddressRequest {
  string wallet_id = 1;
}

message GetReceiveAddressResponse {
  string address = 1;
}
